Vacations implementation.
